fixed collapsed picker and swapped color location on colorways

--- a/hugh.css
+++ b/hugh.css
@@ -5,15 +5,20 @@
 	display: -webkit-flex;
 	display: -ms-flexbox;
 	display: flex;
+	-webkit-box-flex: wrap;
+	-webkit-flex: wrap div;
+	-ms-flex: wrap div;
+	flex: wrap div;
 	margin-bottom: 8px;
 }
 
-.hugh__primary-color {
+.hugh__color {
 	display: block;
-	width: 40px;
-	height: 56px;
+	width: 56px;
+	height: 40px;
 	margin-right: 4px;
 	padding: 0 2px;
+	flex-shrink: 0;
 }
 
 .hugh__submit {
